Gnumeric 1.0.2

Andreas:
	* Add `autofit columns' checkbox to all analysis tools.
	* Add radio buttons to rank dialog to let user choose 
	  behaviour in case of ties.
	* Enable Standard Errors Checkbox in Moving Averages Dialog

Jody:
	* Generate spans after importing a lotus 123 file.
	* Add Russian Ruble.

Morten:
	* Make sure Linux ends up using IEEE_754 code in mathfunc.c.

--------------------------------------------------------------------------
Gnumeric 1.0.1

Andreas:
	* Fix 67878 (help button ref)
	* Fix a few ANOVA error messages
	* Fix 67289 (PERCENTRANK)

Jody:
	* Fix CRASH!! due to last minute translation fix.
	* Some missing '...' in menu names
	* Rename 'Summary' menu -> 'Properties'
	* Support graphs with no data.
	* A bit of warning suppression for s390.
	* Bump the GAL requirement to 0.16

Morten:
	* Added DATE2UNIX and UNIX2DATE.
	* Added GETENV.
	* Fix WEEKDAY.

J.H.M. Dassen (Ray):
	* Lots of bit warning suppression for s390.

--------------------------------------------------------------------------
Gnumeric 1.0.0

Andreas:
	* Improve file format documentation
	* Fix text colour in html and latex exporters (#67550)
	* Fix roff importer (#66457)

Jody:
	* Double check that nearest range is not on another sheet.
	* Fix undo for range fills with overlapping ranges.
	* Do not register commands for pasting a cut onto itself.
	* Fix cloning checkboxes.
	* Make all openers available on the import menu, just in case.
	* Fix sheet objects as inter-sheet dependents.
	* Fix undo from keyboard for sheet object deletion.

--------------------------------------------------------------------------
Gnumeric 0.99.1

Andreas:
	* Improve documentation incl. analysis tools, files & worksheet
	* Implement merges and spans in html exporter
	* Make output from HTML4.0 and HTML3.2 exporters validate 
	* Fix copy multiple cells to single merged cell (#67298)
	* Fix expr entry widget: used to fet confised on mouse clicks
          (#65894)

Jody: