@@ -36,3 +36,7 @@ A tally of the beverages owed.
 
     llanero@jazzfree.com (Manuel)	: Beer
     http://bugzilla.gnome.org/show_bug.cgi?id=68034
+
+1.0.1
+    Morten 			: Hot Chocolate.
+    Crash in search with newer gals.
